--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jesse @ Follow Me Code",
   "license": "MIT",
   "dependencies": {
-    "node-sass": "^4.9.2"
+    "node-sass": "^4.9.2",
+    "npm": "^6.3.0"
   }
 }
